--- a/frontend/src/Home/home.css
+++ b/frontend/src/Home/home.css
@@ -1,4 +1,55 @@
 /* Navigation*/
+
+/*  ALL FONTS */
+#root{
+    font-family: 'Viaoda Libre', cursive;
+}
+
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script|Great+Vibes|Kaushan+Script|Liu+Jian+Mao+Cao|Rochester|Sacramento|Tangerine|Viaoda+Libre&display=swap');
+
+.font-liu{
+    font-family: 'Liu Jian Mao Cao', cursive;
+}
+
+.font-dancing{
+    font-family: 'Dancing Script', cursive;
+}
+
+.font-kaushan{
+    font-family: 'Kaushan Script', cursive;
+}
+
+.font-vibes{
+    font-family: 'Great Vibes', cursive;
+}
+
+
+.font-sacramento{
+    font-family: 'Sacramento', cursive;
+}
+
+.font-rochester{
+    font-family: 'Rochester', cursive;
+}
+
+.font-tangerine{
+    font-family: 'Tangerine', cursive;
+}
+
+.font-viadora{
+    font-family: 'Viaoda Libre', cursive;
+}
+
+/* GENERAL CLASSES */
+
+.text-60{
+    font-size: 60px;
+}
+
+.font-40{
+    font-size: 40px;
+}
+
 .text-white{
     color: white;
 }
@@ -11,24 +62,43 @@
     margin-bottom: 75px;
 }
 
-.about-img{
-    width: 350px;
-    height: 430px;
-}
-
-.news{
-    background-color: black;
-    color: white;
-}
-
-.news-img{
-    width: 200px;
-    height: 200px;
-}
 
 .text-center{
     text-align: center;
 }
+
+.m-top{
+    margin-top: 350px;
+}
+
+.m-top-50{
+    margin-top: 25px;
+}
+
+.m-right-75{
+    margin-right: 75px;
+}
+
+@media only screen and (min-width: 768px){
+    .mt-100{
+        padding-top: 50px;
+        color: white;
+        margin-bottom: 450px;
+    }
+    .mt-300{
+        margin-top: 250px;
+    }
+}
+
+@media only screen and (max-width: 768px){
+    .mt-100{
+        padding-top: 100px;
+        color: white;
+        margin-bottom: 700px;
+    }
+}
+
+/* NAVBAR HERE */
 
 .navbar-brand{
     padding: 1rem !important;
@@ -44,65 +114,18 @@
     opacity: 0.6;
     padding: 50px;
   }
-  /* .scrolling-navbar {
-    transition: background .5s ease-in-out, padding .5s ease-in-out;
-  }
-  .top-nav-collapse {
-    background-color: #667490;
-  }
-  footer.page-footer {
-    background-color: #667490;
-  }
-  @media only screen and (max-width: 768px) {
-    .navbar {
-      background-color: #667490;
-    }
-  } */
-/* 
-  .header-wrapper {  
-    -webkit-transform: translate(-50%,-50%);
-    transform: translate(-50%,-50%);
-    
-  } */
-  
-  /* .header-wrapper .sm-title {
-      margin: 0;
-      color: #9E9E9E;
-      font-size: 10pt;
-      letter-spacing: 2pt;
-  }
-  
-  .header-wrapper h1 {
-      font-size: 16pt;
-      letter-spacing: 8pt;
-      line-height: 40pt;
-      font-weight: 300;
-      color: #fff;
-  } */
 
-.m-top{
-    margin-top: 350px;
-}
+/* INTRO IMAGES AND CAROUSEL OF IMAGES */
+
 .rw-wrapper{
 	width: 80%;
 	position: relative;
 	margin: 0px 380px 500px;
 	font-family: 'Bree Serif';
 	padding-top: 100px;
-	/* height: 400px; */
     overflow: hidden;
     padding: 10px;
 }
-  /* .rw-wrapper{
-	width: 80%;
-    position: relative;
-    padding-top: 100px;
-    margin: 0px 380px 500px;
-    margin-right: 100px;
-	font-family: 'Bree Serif';
-    padding: 10px;
-    text-align: center;
-} */
 
 .rw-sentence{
 	text-align: left;
@@ -210,40 +233,8 @@
 	.rw-sentence { font-size: 9px; }
 }
 
-/* @keyframes rotateWordsSecond {
-    0% { opacity: 1; animation-timing-function: ease-in; width: 0px; }
-    10% { opacity: 0.3; width: 0px; }
-	20% { opacity: 1; width: 100%; }
-    27% { opacity: 0; width: 100%; }
-    100% { opacity: 0; }
-} */
 
-
-.about{
-     background-color: white;
-}
-
-@media only screen and (min-width: 768px){
-    .mt-100{
-        padding-top: 50px;
-        color: white;
-        margin-bottom: 450px;
-    }
-    .mt-300{
-        margin-top: 250px;
-    }
-}
-
-@media only screen and (max-width: 768px){
-    .mt-100{
-        padding-top: 100px;
-        color: white;
-        margin-bottom: 700px;
-    }
-}
-
-
-  html,body {
+html,body {
     height:100%;
 	width:100%;
 	position:relative;
@@ -277,4 +268,230 @@
 }
 .well {
     opacity:0.85
+}
+
+/* ABOUT ME SECTION */
+
+.about{
+     background-color: white;
+}
+
+.about-img{
+    width: 350px;
+    height: 430px;
+}
+
+/* NEWS HERE */
+
+.news{
+    background-color: #fafafa;
+    color: black;
+}
+
+.btnn {
+	border: none;
+	font-family: inherit;
+	font-size: inherit;
+	color: inherit;
+	background: none;
+	cursor: pointer;
+	padding: 20px 40px;
+	display: inline-block;
+	margin: 15px 30px;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	font-weight: 700;
+	outline: none;
+	position: relative;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.btn-1 {
+	border: 1px solid black;
+    color: black;
+    margin-right: 100px;
+    margin-bottom: 30px;
+}
+
+.btn-1c:after {
+	width: 0%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: #fff;
+}
+
+.btn-1c:focus{
+    outline: none;
+    background-color: gold;
+    color: white;
+    border-color: white;
+}
+
+.btn-1c:hover,
+.btn-1c:active {
+    color: white;
+    background-color: rgba(255, 217, 0, 0.884);
+    border-color: white;
+}
+
+.btn-1c:hover:after,
+.btn-1c:active:after {
+    width: 100%;
+    background-color: gold;
+    
+}
+
+.news-img{
+    width: 200px;
+    height: 200px;
+}
+
+.grid {
+	/* padding: 20px 20px 100px 20px; */
+	max-width: 1300px;
+	margin: 0 auto;
+	list-style: none;
+	text-align: center;
+}
+
+.grid li {
+	display: inline-block;
+	width: 440px;
+	margin: 0;
+	padding: 20px;
+	text-align: left;
+	position: relative;
+}
+
+.grid figure {
+	margin: 0;
+	position: relative;
+}
+
+.grid figure img {
+    max-width: 100%;
+    height: 250px;
+	display: block;
+	position: relative;
+}
+
+.grid figcaption {
+	position: absolute;
+	top: 0;
+	left: 0;
+	padding: 20px;
+	background: #2c3f52;
+	color: #ed4e6e;
+}
+
+.grid figcaption h3 {
+	margin: 0;
+	padding: 0;
+	color: #fff;
+}
+
+.grid figcaption span:before {
+	content: 'by ';
+}
+
+.grid figcaption a {
+	text-align: center;
+	padding: 5px 10px;
+	border-radius: 2px;
+	display: inline-block;
+	background: #ed4e6e;
+	color: #fff;
+}
+
+@media screen and (max-width: 31.5em) {
+	.grid {
+		padding: 10px 10px 100px 10px;
+	}
+	.grid li {
+		width: 100%;
+		min-width: 300px;
+	}
+}
+
+.cs-style-2 figure img {
+	z-index: 10;
+    transition: transform 0.8s;
+    filter: grayscale(100%);
+}
+
+.cs-style-2 figure:hover img,
+.cs-style-2 figure.cs-hover img {
+    transform: translateY(-90px);
+    /* transition: transform 0.8s, opacity 0.8s; */
+    filter: grayscale(0);
+}
+
+.cs-style-2 figcaption {
+	height: 90px;
+	width: 100%;
+	top: auto;
+	bottom: 0;
+}
+
+.cs-style-2 figcaption a {
+	position: absolute;
+	right: 20px;
+	top: 30px;
+}
+
+/* MY WORK STYLING */
+
+.work{
+    background-color: white;
+}
+
+.img-hover-zoom--colorize img {
+    transition: transform .5s, filter 1.5s ease-in-out;
+    filter: grayscale(100%);
+    width: 100%;
+    height: ;
+    padding: 20px;
+  }
+  
+  .img-hover-zoom--colorize:hover img {
+    filter: grayscale(0);
+    transform: scale(1.1);
+  }
+
+  .btn-1w {
+	border: 1px solid black;
+    color: black;
+    margin-bottom: 30px;
+}
+  
+
+/* AFTER CARE SECTION */
+
+.after-care{
+    background-color: #fafafa;
+    color: black;
+}
+
+
+
+/* CONTACT SECTION */
+
+.contact{
+    background-color: white;
+}
+
+#map{
+	max-width: 98%;
+	height: 400px;
+}
+.footer{
+	background-color: black;
+	color: white;
+}
+
+.footer2{
+	background-color: #2c3f52;
 }
