--- a/frontend/src/Home/home.css
+++ b/frontend/src/Home/home.css
@@ -117,6 +117,21 @@
 
 /* INTRO IMAGES AND CAROUSEL OF IMAGES */
 
+	@media (max-width: 480px) {
+	.hide-mobile {	
+	  display: none;
+	}
+	.show-mobile{
+		width: 100%;
+		height: 300px;
+	}
+  }
+
+  @media (max-width: 200){
+	  
+  }
+
+
 .rw-wrapper{
 	width: 80%;
 	position: relative;
@@ -227,7 +242,11 @@
     100% { opacity: 0; }
 }
 @media screen and (max-width: 768px){
-	.rw-sentence { font-size: 18px; }
+	.rw-sentence { 
+		font-size: 18px;
+		display: none;
+	 }
+	
 }
 @media screen and (max-width: 320px){
 	.rw-sentence { font-size: 9px; }
@@ -240,7 +259,7 @@ html,body {
 	position:relative;
 }
 #background-carousel{
-	position:fixed;
+	position: absolute;
 	width:100%;
 	height:100%;
 	z-index:-1;
@@ -268,6 +287,15 @@ html,body {
 }
 .well {
     opacity:0.85
+}
+
+@media only screen and (min-width: 768px){
+	#background-carousel{
+		position:fixed;
+		width:100%;
+		height:100%;
+		z-index:-1;
+	}
 }
 
 /* ABOUT ME SECTION */
@@ -344,6 +372,47 @@ html,body {
     
 }
 
+.ww-100{
+	width: 100%;
+	height: auto;
+}
+
+.btn-2 {
+	border: 1px solid white !important;
+	color: white !important;
+    margin-right: 100px;
+    margin-bottom: 30px;
+}
+
+.btn-2c:after {
+	width: 0%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: #fff;
+}
+
+.btn-2c:focus{
+    outline: none;
+    background-color: gold;
+    color: white;
+    border-color: white;
+}
+
+.btn-2c:hover,
+.btn-2c:active {
+    color: white;
+    background-color: rgba(255, 217, 0, 0.884);
+    border-color: white;
+}
+
+.btn-2c:hover:after,
+.btn-2c:active:after {
+    width: 100%;
+    background-color: gold;
+    
+}
+
 .news-img{
     width: 200px;
     height: 200px;
@@ -384,7 +453,7 @@ html,body {
 	left: 0;
 	padding: 20px;
 	background: #2c3f52;
-	color: #ed4e6e;
+	color: #fff;
 }
 
 .grid figcaption h3 {
@@ -392,12 +461,17 @@ html,body {
 	padding: 0;
 	color: #fff;
 }
-
+/* 
 .grid figcaption span:before {
 	content: 'by ';
+} */
+
+.grid figcaption button:hover{
+	color: gold;
+	border-color: transparent;
 }
 
-.grid figcaption a {
+.grid figcaption button {
 	text-align: center;
 	padding: 5px 10px;
 	border-radius: 2px;
@@ -436,7 +510,7 @@ html,body {
 	bottom: 0;
 }
 
-.cs-style-2 figcaption a {
+.cs-style-2 figcaption button {
 	position: absolute;
 	right: 20px;
 	top: 30px;
@@ -466,6 +540,17 @@ html,body {
     color: black;
     margin-bottom: 30px;
 }
+
+
+
+.modal-content{
+	background-color: black !important;
+	color: white;
+}
+
+.back-ground{
+	background-color: transparent;
+}
   
 
 /* AFTER CARE SECTION */
@@ -486,6 +571,13 @@ html,body {
 #map{
 	max-width: 98%;
 	height: 400px;
+}
+
+@media (max-width: 480px){
+	#map{
+		max-width: 95%;
+		height: 300px;
+	}
 }
 .footer{
 	background-color: black;
