most of the css done in the admin panel

--- a/frontend/src/Home/home.css
+++ b/frontend/src/Home/home.css
@@ -6,6 +6,7 @@
 }
 
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script|Great+Vibes|Kaushan+Script|Liu+Jian+Mao+Cao|Rochester|Sacramento|Tangerine|Viaoda+Libre&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap');
 
 .font-liu{
     font-family: 'Liu Jian Mao Cao', cursive;
@@ -79,6 +80,14 @@
     margin-right: 75px;
 }
 
+.m-top100{
+	margin-top: 100px;
+}
+
+.m-top40{
+	margin-top: 40px;
+}
+
 @media only screen and (min-width: 768px){
     .mt-100{
         padding-top: 50px;
@@ -99,6 +108,11 @@
 }
 
 /* NAVBAR HERE */
+
+.navbar-toggler span{
+	color: white;
+	background-color: white;
+}
 
 .navbar-brand{
     padding: 1rem !important;
@@ -123,14 +137,20 @@
 	}
 	.show-mobile{
 		width: 100%;
-		height: 300px;
+		height: 900px;
 	}
+	.view img{
+		height: 130vh;
+		width: 300%;
+	}
+	#background-carousel{
+		position: absolute;
+		width:100%;
+		height:110%;
+		z-index:-1;
+	}
+	.img-fluid {}
   }
-
-  @media (max-width: 200){
-	  
-  }
-
 
 .rw-wrapper{
 	width: 80%;
@@ -252,7 +272,6 @@
 	.rw-sentence { font-size: 9px; }
 }
 
-
 html,body {
     height:100%;
 	width:100%;
@@ -261,7 +280,7 @@ html,body {
 #background-carousel{
 	position: absolute;
 	width:100%;
-	height:100%;
+	height:110%;
 	z-index:-1;
 }
 .carousel,
@@ -292,9 +311,16 @@ html,body {
 @media only screen and (min-width: 768px){
 	#background-carousel{
 		position:fixed;
-		width:100%;
-		height:100%;
+		/* width:100%; */
+		/* height:100%; */
 		z-index:-1;
+	}
+
+	.btn-1 {
+		border: 1px solid black;
+		color: black;
+		margin-right: 100px;
+		margin-bottom: 30px;
 	}
 }
 
@@ -306,7 +332,9 @@ html,body {
 
 .about-img{
     width: 350px;
-    height: 430px;
+	height: 430px;
+	box-shadow: 20px 20px 30px 0 grey;
+	border-radius: 10px;
 }
 
 /* NEWS HERE */
@@ -339,7 +367,6 @@ html,body {
 .btn-1 {
 	border: 1px solid black;
     color: black;
-    margin-right: 100px;
     margin-bottom: 30px;
 }
 
@@ -419,7 +446,6 @@ html,body {
 }
 
 .grid {
-	/* padding: 20px 20px 100px 20px; */
 	max-width: 1300px;
 	margin: 0 auto;
 	list-style: none;
@@ -499,7 +525,7 @@ html,body {
 .cs-style-2 figure:hover img,
 .cs-style-2 figure.cs-hover img {
     transform: translateY(-90px);
-    /* transition: transform 0.8s, opacity 0.8s; */
+    
     filter: grayscale(0);
 }
 
@@ -523,11 +549,13 @@ html,body {
 }
 
 .img-hover-zoom--colorize img {
+	margin-top: 50px;
     transition: transform .5s, filter 1.5s ease-in-out;
     filter: grayscale(100%);
     width: 100%;
     height: ;
-    padding: 20px;
+	padding: 20px;
+	box-shadow: 0 0px 30px 0 goldenrod;
   }
   
   .img-hover-zoom--colorize:hover img {
@@ -568,9 +596,9 @@ html,body {
     background-color: white;
 }
 
-#map{
-	max-width: 98%;
-	height: 400px;
+#map > div{
+	max-width: 100%;
+	height: 100vh;
 }
 
 @media (max-width: 480px){
@@ -587,3 +615,363 @@ html,body {
 .footer2{
 	background-color: #2c3f52;
 }
+
+/* ADMIN PANEL */
+
+.box{
+	border: 2px solid white;
+	padding: 15px;
+	background-color: goldenrod;
+	color: white;
+	border-radius: 6px;
+}
+
+.box:hover{
+	background-color: rgb(32, 218, 116);
+	border-color: rgb(185, 143, 3);
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.box2{
+	border: 2px solid white;
+	padding: 15px;
+	background-color: rgb(34, 146, 34);
+	color: white;
+	border-radius: 6px;
+}
+
+.box2:hover{
+	background-color: rgba(185, 142, 3, 0.726);
+	border-color: rgb(185, 143, 3);
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.box3{
+	border: 2px solid white;
+	padding: 15px;
+	background-color: rgb(32, 218, 116);
+	color: white;
+	border-radius: 6px;
+}
+
+.box3:hover{
+	background-color: rgb(185, 143, 3);
+	border-color: rgb(185, 143, 3);
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.box4{
+	border: 2px solid white;
+	padding: 15px;
+	background-color: rgb(218, 116, 32);
+	color: white;
+	border-radius: 6px;
+}
+
+.box4:hover{
+	background-color: rgb(185, 143, 3);
+	border-color: rgb(185, 143, 3);
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.icon-size{
+	font-size: 40px;
+}
+
+.add-font{
+	font-size: 24px;
+	font-weight: bold;
+	font-family: 'Bebas Neue', cursive;
+}
+
+.add-font2{
+	font-size: 20px;
+	font-weight: bold;
+	font-family: 'Bebas Neue', cursive;
+}
+
+.font-title{
+	/* font-weight: bold; */
+	font-family: 'Bebas Neue', cursive;
+	font-size: 28px;
+}
+
+.button-box{
+	border: 1px solid white;
+	padding: 30px;
+	background-color: green;
+	color: white;
+	border-radius: 4px;
+	margin: 15px;
+}
+
+.button-box:hover{
+	background-color: rgb(185, 143, 3);
+	border-color: rgb(185, 143, 3);
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+	text-align: center;
+}
+
+/* SIGN IN ADMIN FORM  */
+
+.wrapper {
+	display: flex;
+	align-items: center;
+	flex-direction: column; 
+	justify-content: center;
+	width: 100%;
+	min-height: 100%;
+	padding: 20px;
+  }
+  
+  #formContent {
+	-webkit-border-radius: 10px 10px 10px 10px;
+	border-radius: 10px 10px 10px 10px;
+	background: #fff;
+	padding: 30px;
+	width: 90%;
+	max-width: 450px;
+	position: relative;
+	padding: 0px;
+	-webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+	box-shadow: 0 10px 30px 0 goldenrod;
+	text-align: center;
+  }
+  
+  #formFooter {
+	background-color: #f6f6f6;
+	border-top: 1px solid #dce8f1;
+	padding: 25px;
+	text-align: center;
+	-webkit-border-radius: 0 0 10px 10px;
+	border-radius: 0 0 10px 10px;
+  }
+  
+  
+  
+  /* TABS */
+  
+  h2.inactive {
+	color: #cccccc;
+  }
+  
+  h2.active {
+	color: #0d0d0d;
+	border-bottom: 2px solid #5fbae9;
+  }
+  
+  
+  
+  /* FORM TYPOGRAPHY*/
+  
+  .button-signin, .button-signin, .button-signin  {
+	background-color: goldenrod;
+	border: none;
+	color: white;
+	padding: 15px 80px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	text-transform: uppercase;
+	font-size: 13px;
+	-webkit-box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+	box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+	-webkit-border-radius: 5px 5px 5px 5px;
+	border-radius: 5px 5px 5px 5px;
+	margin: 5px 20px 40px 20px;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-ms-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+  }
+  
+  .button-signin:hover, .button-signin:hover, .button-signin:hover  {
+	background-color: gold;
+  }
+  
+  .button-signin:active, .button-signin:active, .button-signin:active  {
+	-moz-transform: scale(0.95);
+	-webkit-transform: scale(0.95);
+	-o-transform: scale(0.95);
+	-ms-transform: scale(0.95);
+	transform: scale(0.95);
+  }
+  
+  .input-signin {
+	background-color: #f6f6f6;
+	border: none;
+	color: #0d0d0d;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 5px;
+	width: 85%;
+	border: 2px solid #f6f6f6;
+	-webkit-transition: all 0.5s ease-in-out;
+	-moz-transition: all 0.5s ease-in-out;
+	-ms-transition: all 0.5s ease-in-out;
+	-o-transition: all 0.5s ease-in-out;
+	transition: all 0.5s ease-in-out;
+	-webkit-border-radius: 5px 5px 5px 5px;
+	border-radius: 5px 5px 5px 5px;
+  }
+  
+  input[type=text]:focus {
+	background-color: #fff;
+	border-bottom: 2px solid #5fbae9;
+  }
+  
+  input[type=text]:placeholder {
+	color: #cccccc;
+  }
+  
+  .fa-user{
+	padding: 50px;
+	  font-size: 50px;
+	  color: goldenrod;
+  }
+  
+  /* ANIMATIONS */
+  
+  /* Simple CSS3 Fade-in-down Animation */
+  .fadeInDown {
+	-webkit-animation-name: fadeInDown;
+	animation-name: fadeInDown;
+	-webkit-animation-duration: 1s;
+	animation-duration: 1s;
+	-webkit-animation-fill-mode: both;
+	animation-fill-mode: both;
+  }
+  
+  @-webkit-keyframes fadeInDown {
+	0% {
+	  opacity: 0;
+	  -webkit-transform: translate3d(0, -100%, 0);
+	  transform: translate3d(0, -100%, 0);
+	}
+	100% {
+	  opacity: 1;
+	  -webkit-transform: none;
+	  transform: none;
+	}
+  }
+  
+  @keyframes fadeInDown {
+	0% {
+	  opacity: 0;
+	  -webkit-transform: translate3d(0, -100%, 0);
+	  transform: translate3d(0, -100%, 0);
+	}
+	100% {
+	  opacity: 1;
+	  -webkit-transform: none;
+	  transform: none;
+	}
+  }
+  
+  /* Simple CSS3 Fade-in Animation */
+  @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+  @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+  @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+  
+  .fadeIn {
+	opacity:0;
+	-webkit-animation:fadeIn ease-in 1;
+	-moz-animation:fadeIn ease-in 1;
+	animation:fadeIn ease-in 1;
+  
+	-webkit-animation-fill-mode:forwards;
+	-moz-animation-fill-mode:forwards;
+	animation-fill-mode:forwards;
+  
+	-webkit-animation-duration:1s;
+	-moz-animation-duration:1s;
+	animation-duration:1s;
+  }
+  
+  .fadeIn.first {
+	-webkit-animation-delay: 0.4s;
+	-moz-animation-delay: 0.4s;
+	animation-delay: 0.4s;
+  }
+  
+  .fadeIn.second {
+	-webkit-animation-delay: 0.6s;
+	-moz-animation-delay: 0.6s;
+	animation-delay: 0.6s;
+  }
+  
+  .fadeIn.third {
+	-webkit-animation-delay: 0.8s;
+	-moz-animation-delay: 0.8s;
+	animation-delay: 0.8s;
+  }
+  
+  .fadeIn.fourth {
+	-webkit-animation-delay: 1s;
+	-moz-animation-delay: 1s;
+	animation-delay: 1s;
+  }
+  
+  /* Simple CSS3 Fade-in Animation */
+  .underlineHover:after {
+	display: block;
+	left: 0;
+	bottom: -10px;
+	width: 0;
+	height: 2px;
+	background-color: gold;
+	content: "";
+	transition: width 0.2s;
+  }
+  
+  .underlineHover:hover {
+	color: #0d0d0d;
+  }
+  
+  .underlineHover:hover:after{
+	width: 100%;
+  }
+  
+  
+  
+  /* OTHERS */
+  
+  *:focus {
+	  outline: none;
+  } 
+  
+  #icon {
+	width:60%;
+  }
+  
+
+  /* FORMS UPLOAD / EDIT ADMIN PANEL */
+  .title-forms{
+	  padding: 10px;
+	  font-family: 'Bebas Neue', cursive;
+  }
+
+  .back-white{
+	  background-color: white !important;
+	  color: black;
+	  box-shadow: 0 0px 30px 0 green;
+  }
+
+  .button-close-admin{
+	  background-color: black;
+	  color: white;
+  }
